# FidZuluPythonMLBaseProject

./: .gitignore  READ.me  README.md  debug_env.py  pyproject.toml  pytest.ini  requirements.txt
notebooks/: tensorflow_veggie_price_forecast.ipynb  vegetable_price_exploration.ipynb
src/fidzulu/: config.py  db.py
src/fidzulu/business/: price_wrangler.py
src/fidzulu/repositories/: price_repository.py
src/fidzulu/utils/: logging.py
tests/: conftest.py  test_db_connection.py  test_repositories.py
